# keiba_ai_app

./: .gitignore  README.md
.github/workflows/: cd_batch.yml  cd_web.yml
app/keiba_ai/: Dockerfile  lgbm_model.txt  pyproject.toml
app/keiba_ai/src/keiba_ai/: main.py
app/keiba_ai/src/keiba_ai/mylib/: get_data.py  inference.py
app/keiba_ai/src/keiba_ai/pages/: keiba_collector.py
app/keiba_collector/: Dockerfile  pyproject.toml
app/keiba_collector/src/keiba_collector/: main.py
app/keiba_science/: pyproject.toml
app/keiba_science/src/keiba_science/: eda.ipynb  lgbm_model.txt  model_ver1.ipynb
infra/: backend.tf  cloud_run.tf  locals.tf
