[project]
name = "keiba-science"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel (>=7.2.0,<8.0.0)",
    "pandas (>=1.5.3,<3.0.0)",
    "google-cloud-bigquery (>=3.40.1,<4.0.0)",
    "db-dtypes (>=1.5.0,<2.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "shap (>=0.50.0,<0.51.0)"
]

[tool.poetry]
packages = [{include = "keiba_science", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
